# Plots

./: .cursorignore  .gitignore  .obsidianignore  AUTO_UPDATER_README.md  CHANGELOG.md  CODESPACES_SETUP_GUIDE.md  CROSS_PLATFORM_BUILD.md  CROSS_PLATFORM_PACKAGING.md  Cargo.toml  DATA_STUDIO_FORMULA_REFERENCE.md  Data Studio + Playground - Master P.md  Data Studio - master.md  FEATURES.md  FINAL_VERIFICATION.md  GITHUB_ACTIONS_SETUP_GUIDE.md  NEXT_STEPS.md  Playground – Master Plan.md  README.md  README_Enhanced_SKU_Analyzer.md  README_Polars_SKU_Analyzer.md  SECURITY_TECHNICAL_CHECKLIST.md  STAGE_BRANCH_SETUP_CHECKLIST.md  UNIFIED_FORMULA_REFERENCE.md  VAULT_GIT_SYNC_GUIDE.md  VAULT_README.md  VAULT_SYSTEM_SUMMARY.md  VAULT_V2_GUIDE.md  VAULT_WATCHER_GUIDE.md  app.py  bnihxbuihebnd.py  bounding_box_plotter_old.py  build-all-platforms.sh  build_complete_package.py  check-vault-watcher.sh  create_release_tag.sh  data_studio_formula_modes.md  developer_bypass  developer_ignore  ds4.py  enhanced_sku_ratio_analyzer.py  (+31 more)
.devcontainer/: devcontainer.json  setup.sh
BBP/: IMPLEMENTATION_SUMMARY.md  MAIN_REPOSITORY_README.md  REQUIRED_FILES_STRUCTURE.md  bounding_box_plotter.py  build.py  sample_bounding_boxes.csv
Ex-comunicado/: AnnotationTool_windows.spec  annotation-plot.py  build_windows.bat  import sys.py  playground_old.py  plot.py  plotter.spec  plotter01.py  plotter_wo_settings.py
Plotter/: README.md  __init__.py  dependencies.py  draw_main_plot_func.txt  generate_thumbnail_func.txt  launcher.py  main.py  onclick_main_func.txt  plotter.py  plotter_clean.py  plotter_exact.py  plotter_new.py  plotter_simple.py  settings.py  ui_manager.py
backend/: Cargo.toml  start_fastapi.py
backend/src/: advanced_formulas.rs  data_processor.rs  database.rs  main.rs  models.rs  workflow_engine.rs
bounding-box-plotter/: .gitignore  BoundingBoxPlotter.spec  CONTRIBUTING.md  LICENSE  QUICK_START_MACOS.md  README.md  bounding_box_plotter.py  bounding_box_plotter.spec  pytest.ini  pyupdater.yml  requirements.txt  setup.py  test_build.py  version.py
data-studio/: PROJECT_SUMMARY.md  README.md  __init__.py  data_processing_demo.py  interactive_formula_tester.py  main.py  quick_formula_demo.py  requirements.txt  setup.py  simple_backend_test.py  test_app.py  test_backend_services.py  test_formula_engine.py  test_specific_formulas.py
docs/: BUILD.md  INTEGRATION.md  README.md  (+1 more)
(+146 files in other folders)
